# IoT-Glave

./: .buildconfig  .gitignore  IoT-Glave.sln  README.md  config  makefile  meson.build  org.gnome.Iot-Thing.json
data/: meson.build  org.gnome.Iot-Thing.appdata.xml.in  org.gnome.Iot-Thing.gschema.xml
include/: config.h  netcontrol.h
include/net/: color.h  device.h  lifx.h
main/: main.ino
po/: POTFILES  meson.build
src/: IoT-Glave.vcxproj  ahahah.py  config.cpp  iot-thing.gresource.xml  iot-thing.in  lifxcontrol.glade  main.cpp  main.py  meson.build  window.py  window.ui
src/include/: config.h
